--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
   
-.td-input input[type="text"]:not(.browser-default) {
+.td-input input:not(.browser-default) {
   margin: 0;
 }
 
